Fixed the episode's header layout on mobile

--- a/src/css/article.scss
+++ b/src/css/article.scss
@@ -1,13 +1,14 @@
 /* @group Article */
 article a {
-	background-image: linear-gradient(to bottom, rgba($color-brand, .5), rgba($color-brand, .5));
+	background-image: linear-gradient(to bottom, $color-action, $color-action);
 	background-position: 0 1.0625em;
 	background-repeat: no-repeat;
 	background-size: 100% 100%;
 	padding: .125em 0;
 
 	transition: background-position .15s;
-	font-weight: 800;
+
+	@include font-weight-bold("archer");
 	text-decoration: none;
 	color: currentColor;
 }
@@ -18,15 +19,24 @@ article a:focus { background-position: 0 0; }
 article header { position: relative; }
 article header img { @include image-responsive; }
 article header .snake {
-	width: 62.5%;
 	border: 4px solid $color-brand;
 
 	position: absolute;
 	top: 65px;
 	bottom: 0;
+	right: rem-to-px(grid-gutter("sm")) - 4px;
+	left:  rem-to-px(grid-gutter("sm")) - 4px;
 }
 
-article .content { font-size: 1.125rem; }
+@include media-md {
+	article header .snake {
+		width: 62.5%;
+		right: auto;
+		left: -4px; // Offset the border
+	}
+}
+
+article > .container { font-size: 1.125rem; }
 
 article .lettrine {
 	background: $color-brand;
@@ -40,7 +50,7 @@ article .lettrine {
 	display: inline-block;
 
 	@include font-brandon;
-	@include weight-regular;
+	@include font-weight-regular;
 	font-size: 3.75rem;
 
 	text-align: center;
@@ -59,7 +69,7 @@ article aside {
 
 article aside span {
 	font-size: 1.4em;
-	@include weight-bold;
+	@include font-weight-bold("archer");
 }
 
 
@@ -86,7 +96,7 @@ article blockquote .author {
 }
 
 article blockquote p:first-of-type:before {
-	background: #679EA7;
+	background: $color-brand;
 	width: 1.6em;
 	line-height: 1.6em;
 	border-radius: 50%;
@@ -125,11 +135,12 @@ article footer div:last-child {
 
 @each $color in $colors-obsessions {
 	$i: index($colors-obsessions, $color);
-	article.obsession-#{$i} a          { background-image: linear-gradient(to bottom, rgba($color, .5), rgba($color, .5)); }
 	article.obsession-#{$i} .snake     { border-color: $color; }
 	article.obsession-#{$i} .lettrine  { background:   $color; }
 	article.obsession-#{$i} aside span { color:        $color; }
+	article.obsession-#{$i} blockquote p:first-of-type:before { background: $color; }
 }
+article .tags a { background-image: linear-gradient(to bottom, $color-action-contextual, $color-action-contextual); }
 /* @end Article */
 
 article header p:first-child a,
